Fixed flexbox overflow bug.

--- a/indexStyles.css
+++ b/indexStyles.css
@@ -3,30 +3,47 @@ body {
     width: 100vw;
     background-color: black;
     margin: 0rem;
-    overflow: hidden;
     cursor: none;
+    overflow: hidden;
 }
 
 #image-track {
     display: flex;
-    gap: 4vmin;
-    position: relative;
+    gap: 5vmin;
+    position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(0%, -50%);
     user-select: none;
-    /* -- Prevent image highlighting -- */
 }
 
-.image-container .image {
+#image-track .image {
+    transition: transform .2s ease;
+}
+
+
+#image-track .image-container {
+    overflow: hidden;
+    position: relative;
+    transition: 0.7s ease;
+}
+
+#image-track .image-container:hover .image {
+    transform: scale(1.35) translate(0, 10%);
+}
+
+#image-track .image {
     width: 40vmin;
     height: 56vmin;
     object-fit: cover;
     object-position: 100% center;
     opacity: 1;
-    display: block;
-    transition: 0.5s ease;
-    backface-visibility: hidden;
+    transition: 0.6s ease;
+    /* backface-visibility: hidden; */
+}
+
+.image-container:hover {
+    transform: scale(1.1);
 }
 
 .image-container:hover .image {
@@ -37,26 +54,13 @@ body {
     opacity: 1;
 }
 
-.image-container:hover {
-    transform: scale(1.05);
-}
-
-.image-container {
-    text-align: center;
-    position: relative;
-    transition: 0.5s ease;
-}
-
 .image-container .text {
     color: white;
-    font-size: 4vmin;
+    font-size: 5vmin;
     opacity: 0;
-
     position: absolute;
     top: 50%;
     left: 50%;
-
-    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 
     transition: 0.5s ease;
